; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_do_clear_cache.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_do_clear_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TARGET_SIZE_2 = common dso_local global i32 0, align 4
@needs_clear_cache = common dso_local global i32* null, align 8
@BASE_ADDR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_clear_cache() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %6

6:                                                ; preds = %76, %0
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* @TARGET_SIZE_2, align 4
  %9 = sub nsw i32 %8, 17
  %10 = shl i32 1, %9
  %11 = icmp slt i32 %7, %10
  br i1 %11, label %12, label %79

12:                                               ; preds = %6
  %13 = load i32*, i32** @needs_clear_cache, align 8
  %14 = load i32, i32* %1, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %3, align 4
  %18 = load i32, i32* %3, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %75

20:                                               ; preds = %12
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %67, %20
  %22 = load i32, i32* %2, align 4
  %23 = icmp slt i32 %22, 32
  br i1 %23, label %24, label %70

24:                                               ; preds = %21
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* %2, align 4
  %27 = shl i32 1, %26
  %28 = and i32 %25, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %66

30:                                               ; preds = %24
  %31 = load i32, i32* @BASE_ADDR, align 4
  %32 = load i32, i32* %1, align 4
  %33 = mul nsw i32 %32, 131072
  %34 = add nsw i32 %31, %33
  %35 = load i32, i32* %2, align 4
  %36 = mul nsw i32 %35, 4096
  %37 = add nsw i32 %34, %36
  store i32 %37, i32* %4, align 4
  %38 = load i32, i32* %4, align 4
  %39 = add nsw i32 %38, 4095
  store i32 %39, i32* %5, align 4
  %40 = load i32, i32* %2, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %2, align 4
  br label %42

42:                                               ; preds = %64, %30
  %43 = load i32, i32* %2, align 4
  %44 = icmp slt i32 %43, 32
  br i1 %44, label %45, label %65

45:                                               ; preds = %42
  %46 = load i32, i32* %3, align 4
  %47 = load i32, i32* %2, align 4
  %48 = shl i32 1, %47
  %49 = and i32 %46, %48
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %56

51:                                               ; preds = %45
  %52 = load i32, i32* %5, align 4
  %53 = add nsw i32 %52, 4096
  store i32 %53, i32* %5, align 4
  %54 = load i32, i32* %2, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %2, align 4
  br label %64

56:                                               ; preds = %45
  %57 = load i32, i32* %4, align 4
  %58 = sext i32 %57 to i64
  %59 = inttoptr i64 %58 to i8*
  %60 = load i32, i32* %5, align 4
  %61 = sext i32 %60 to i64
  %62 = inttoptr i64 %61 to i8*
  %63 = call i32 @__clear_cache(i8* %59, i8* %62)
  br label %65

64:                                               ; preds = %51
  br label %42

65:                                               ; preds = %56, %42
  br label %66

66:                                               ; preds = %65, %24
  br label %67

67:                                               ; preds = %66
  %68 = load i32, i32* %2, align 4
  %69 = add nsw i32 %68, 1
  store i32 %69, i32* %2, align 4
  br label %21

70:                                               ; preds = %21
  %71 = load i32*, i32** @needs_clear_cache, align 8
  %72 = load i32, i32* %1, align 4
  %73 = sext i32 %72 to i64
  %74 = getelementptr inbounds i32, i32* %71, i64 %73
  store i32 0, i32* %74, align 4
  br label %75

75:                                               ; preds = %70, %12
  br label %76

76:                                               ; preds = %75
  %77 = load i32, i32* %1, align 4
  %78 = add nsw i32 %77, 1
  store i32 %78, i32* %1, align 4
  br label %6

79:                                               ; preds = %6
  ret void
}

declare dso_local i32 @__clear_cache(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
